--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon -r dotenv/config ./src/app.js dotenv_config_path=./.env"
+    "dev": "nodemon -r dotenv/config ./src/app.js dotenv_config_path=./.env",
+	"test": "jasmine",
+	"cover": "nyc jasmine"
   },
   "author": "Vinicius Carneiro",
   "dependencies": {
@@ -11,6 +13,13 @@
     "log4js": "^6.1.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.1"
-  }
+    "nodemon": "^2.0.1",
+    "jasmine": "^3.5.0",
+    "jasmine-console-reporter": "^3.1.0",
+    "jasmine-reporters": "^2.3.2",
+    "nyc": "^14.1.1"
+  },
+  "files": [
+    "components/*"
+  ]
 }
