--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Vinicius Carneiro",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "log4js": "^6.1.2"
   },
   "devDependencies": {
